Add test code for uploading files and reading data from a database.

--- a/mahogany/src/main/resources/templates/home.html
+++ b/mahogany/src/main/resources/templates/home.html
@@ -34,5 +34,8 @@
 		<div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'center'"></div>
 		
 	</div>
+	<div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'bottom'">
+		<input type="file"/>
+	</div>
 </body>
 </html>
